# jarvis

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
apps/: __init__.py
apps/api/: README.md  __init__.py  server.py
apps/cli/: README.md  __init__.py  main.py
apps/web/: README.md  app.js  index.html  styles.css
docs/: agents.md  architecture.md  memory.md  roadmap.md  safety.md  tools.md  vision.md  voice.md
scripts/: dev.sh  lint.sh  test.sh  web.sh
